Until chapter III - Class 4 - Understanding authentication with JWT
